--- a/index.html
+++ b/index.html
@@ -1,1 +1,63 @@
-Hello World
+<!DOCTYPE html>
+<html><head>
+<meta http-equiv="content-type" content="text/html; charset=windows-1252"><meta name="viewport" content="width=device-width"><title>https://bigboxcollection.com/3DBox/TheDig.3DBox</title><link rel="stylesheet" type="text/css" href="resource://content-accessible/viewsource.css"></head><body id="viewsource" style="tab-size: 4"><span id="line1"><span></span><span class="doctype">&lt;!DOCTYPE html&gt;</span><span>
+</span></span><span id="line2"><span></span><span>&lt;<span class="start-tag">html</span>&gt;</span><span>
+</span></span><span id="line3"><span>  </span><span>&lt;<span class="start-tag">head</span>&gt;</span><span>
+</span></span><span id="line4"><span>	</span><span>&lt;<span class="start-tag">meta</span> <span class="attribute-name">name</span>="<a class="attribute-value">viewport</a>" <span class="attribute-name">content</span>="<a class="attribute-value">width=device-width, initial-scale=1, maximum-scale=1</a>"&gt;</span><span>
+</span></span><span id="line5"><span>	</span><span>&lt;<span class="start-tag">style</span>&gt;</span><span>
+</span></span><span id="line6"><span>		*{
+</span></span><span id="line7"><span>			font-family: 'Roboto', sans-serif;
+</span></span><span id="line8"><span>		}
+</span></span><span id="line9"><span>		body {
+</span></span><span id="line10"><span>			margin: 0px;
+</span></span><span id="line11"><span>			font-size:9pt;
+</span></span><span id="line12"><span>		}
+</span></span><span id="line13"><span>		#boxcontrols{
+</span></span><span id="line14"><span>			
+</span></span><span id="line15"><span>			cursor:-webkit-grab;
+</span></span><span id="line16"><span>			position: absolute;
+</span></span><span id="line17"><span>			top: 4em;
+</span></span><span id="line18"><span>			left: 4em;
+</span></span><span id="line19"><span>			z-index: 2;
+</span></span><span id="line20"><span>			height: calc(100% - 8em);
+</span></span><span id="line21"><span>			width: calc(100% - 8em);
+</span></span><span id="line22"><span>			display: block;
+</span></span><span id="line23"><span>		}
+</span></span><span id="line24"><span>		#box{
+</span></span><span id="line25"><span>			position:absolute;
+</span></span><span id="line26"><span>			top:0em;
+</span></span><span id="line27"><span>			bottom:0em;
+</span></span><span id="line28"><span>			left:0em;
+</span></span><span id="line29"><span>			right:0em;
+</span></span><span id="line30"><span>			overflow:hidden;
+</span></span><span id="line31"><span>			transition-timing-function: ease;
+</span></span><span id="line32"><span>			transition: opacity 0.4s;
+</span></span><span id="line33"><span>			z-index:1;
+</span></span><span id="line34"><span>			opacity:0;
+</span></span><span id="line35"><span>			filter: drop-shadow(0 50px 30px black);
+</span></span><span id="line36"><span>		}
+</span></span><span id="line37"><span>		#idle{
+</span></span><span id="line38"><span>			display:block;
+</span></span><span id="line39"><span>			position:absolute;
+</span></span><span id="line40"><span>			top:0px;
+</span></span><span id="line41"><span>			left:0px;
+</span></span><span id="line42"><span>			right:0px;
+</span></span><span id="line43"><span>			bottom:0px;
+</span></span><span id="line44"><span>			opacity:1;
+</span></span><span id="line45"><span>			transition: opacity 0.4s ease, left 0.4s ease;
+</span></span><span id="line46"><span>			z-index:0;
+</span></span><span id="line47"><span>			background-image:url(idle.gif);
+</span></span><span id="line48"><span>			background-position:50% 50%;
+</span></span><span id="line49"><span>			background-repeat:no-repeat;
+</span></span><span id="line50"><span>		}
+</span></span><span id="line51"><span>	</span><span>&lt;/<span class="end-tag">style</span>&gt;</span><span>
+</span></span><span id="line52"><span>  </span><span>&lt;/<span class="end-tag">head</span>&gt;</span><span>
+</span></span><span id="line53"><span>  </span><span>&lt;<span class="start-tag">body</span>&gt;</span><span>
+</span></span><span id="line54"><span>	</span><span>&lt;<span class="start-tag">div</span> <span class="attribute-name">id</span>="<a class="attribute-value">boxcontrols</a>"&gt;</span><span></span><span>&lt;/<span class="end-tag">div</span>&gt;</span><span>
+</span></span><span id="line55"><span>	</span><span>&lt;<span class="start-tag">div</span> <span class="attribute-name">id</span>="<a class="attribute-value">box</a>"&gt;</span><span></span><span>&lt;/<span class="end-tag">div</span>&gt;</span><span>
+</span></span><span id="line56"><span>	</span><span>&lt;<span class="start-tag">div</span> <span class="attribute-name">id</span>="<a class="attribute-value">idle</a>"&gt;</span><span></span><span>&lt;/<span class="end-tag">div</span>&gt;</span><span>
+</span></span><span id="line57"><span>    </span><span>&lt;<span class="start-tag">script</span> <span class="attribute-name">src</span>="<a class="attribute-value" href="view-source:https://bigboxcollection.com/3DBox/three.min.js">three.min.js</a>"&gt;</span><span></span><span>&lt;/<span class="end-tag">script</span>&gt;</span><span>
+</span></span><span id="line58"><span>    </span><span>&lt;<span class="start-tag">script</span>&gt;</span><span>        
+</span></span><span id="line59"><span>        boxwidth=196;boxheight=251;boxdepth=39;textureFile='TheDig';specularMapFile='../_default/8';gatefolddirection='horizontal';topbottom=1;hasgatefold=1;    </span><span>&lt;/<span class="end-tag">script</span>&gt;</span><span>
+</span></span><span id="line60"><span>	</span><span>&lt;<span class="start-tag">script</span> <span class="attribute-name">src</span>="<a class="attribute-value" href="view-source:https://bigboxcollection.com/3DBox/bigbox.js">bigbox.js</a>"&gt;</span><span></span><span>&lt;/<span class="end-tag">script</span>&gt;</span><span>
+</span></span><span id="line61"><span></span><span>&lt;/<span class="end-tag">body</span>&gt;</span><span></span></span></body></html>
